--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -18,6 +18,7 @@
 
 .page {
   @include breakpoint($large) {
+    max-width: 1280px;
     @include span(10 of 12 last);
     @include prefix(0.5 of 12);
     @include suffix(2 of 12);
